# rustrunner

./: .gitignore  Cargo.toml  README.md  launch
scripts/: README.md  build_wasm_module.sh  check_rust.sh  check_wasm_toolchain.sh
services/: README.md
services/atencion_cliente_bff/: Cargo.toml  README.md  atencion_cliente_bff.wasm  openapi.json
services/atencion_cliente_bff/config/: service.json
services/atencion_cliente_bff/src/: main.rs
services/atencion_cuenta_business/: Cargo.toml  README.md  atencion_cuenta_business.wasm  openapi.json
services/atencion_cuenta_business/config/: service.json
services/atencion_cuenta_business/src/: main.rs
services/bye_world/: Cargo.toml  README.md  openapi.json
services/bye_world/config/: service.json
services/bye_world/src/: main.rs
services/facturacion_sap_adapter/: Cargo.toml  README.md  facturacion_sap_adapter.wasm  openapi.json
services/facturacion_sap_adapter/config/: service.json
services/facturacion_sap_adapter/src/: main.rs
services/hello_world/: Cargo.toml  README.md  openapi.json
services/hello_world/config/: service.json
services/hello_world/src/: main.rs
services/shopify_orders_adapter/: Cargo.toml  README.md  openapi.json  shopify_orders_adapter.wasm
services/shopify_orders_adapter/config/: service.json
services/shopify_orders_adapter/src/: main.rs
src/: README.md  config.rs  health.rs  lib.rs  logs.rs  main.rs  memory.rs  process.rs  queue.rs  scheduler.rs  server.rs  stats.rs
src/templates/: dashboard.html  mod.rs
