[package]
name = "rustrunner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
url = "2"
toml = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ureq = { version = "2", default-features = false, features = ["json"] }
