[package]
name = "atencion_cuenta_business"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
log = "0.4"
env_logger = "0.11"
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", default-features = false, features = ["native-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ureq = { version = "2", default-features = false }
