[package]
name = "shopify_orders_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
env_logger = "0.11"
hyper = { package = "hyper_wasi", version = "0.15", features = ["http1", "server", "runtime", "client"] }
log = "0.4"
serde_json = "1"
tokio = { package = "tokio_wasi", version = "1", features = ["macros", "rt", "net", "io-util", "time"] }
